# KapoorLabs-MTrack

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: deploy.yml
notebooks/: 01_simulate_and_fit.ipynb  02_real_data_pipeline.ipynb
plugins/kapoorlabs_mtrack_optimizer/: __init__.py  _reader.py  _widget.py  _worker.py  napari.yaml  pyproject.toml
plugins/kapoorlabs_mtrack_optimizer/_tests/: test_worker.py
plugins/kapoorlabs_mtrack_ransac/: __init__.py  _reader.py  _widget.py  _worker.py  napari.yaml  pyproject.toml
plugins/kapoorlabs_mtrack_ransac/_tests/: test_worker.py
scripts/: fit_endpoints.py  track_endpoints.py
src/kapoorlabs_mtrack/: caped.yaml
src/kapoorlabs_mtrack/_tests/: test_fit_stack.py  test_gradient.py  test_joint.py  test_pipeline.py  test_ransac.py  test_track.py
src/kapoorlabs_mtrack/fit/: __init__.py  joint.py  lm.py
src/kapoorlabs_mtrack/io/: __init__.py  tif.py
src/kapoorlabs_mtrack/models/: __init__.py  multi.py  spline_third_order.py
src/kapoorlabs_mtrack/pipeline/: __init__.py  fit_stack.py  skeleton.py
src/kapoorlabs_mtrack/ransac/: __init__.py  dynamics.py  fits.py  kymograph_extract.py  models.py  vollseg_segment.py
src/kapoorlabs_mtrack/simulate/: __init__.py  movie.py  synthetic.py
src/kapoorlabs_mtrack/track/: __init__.py  cost.py  hungarian.py  kymograph.py  profile.py
src/kapoorlabs_mtrack/verify/: __init__.py  gradient_check.py
