[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


# Version comes from `git describe --tags` at build time. setuptools_scm
# writes _version.py so setup.cfg / runtime imports both resolve to it.
# Tag the commit (e.g. ``git tag v1.2.3 && git push --follow-tags``) and
# the deploy workflow uploads that version to PyPI.
[tool.setuptools_scm]
write_to = "src/kapoorlabs_mtrack/_version.py"
fallback_version = "0.0.0"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
