[metadata]
name = KapoorLabs-MTrack

description = MTrack rewrite in python, deprecating the Fiji plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kapoorlabs-CAPED/KapoorLabs-MTrack
author = Varun Kapoor
author_email = randomaccessiblekapoor@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Kapoorlabs-CAPED/KapoorLabs-MTrack/issues
    Documentation = https://github.com/Kapoorlabs-CAPED/KapoorLabs-MTrack#README.md
    Source Code = https://github.com/Kapoorlabs-CAPED/KapoorLabs-MTrack
    User Support = https://github.com/Kapoorlabs-CAPED/KapoorLabs-MTrack/issues

[options]
packages = find:
# Core install -- the LM optimizer, simulator, pipeline, tracker.
# Heavyweight scientific deps are vendored here because every public
# entry point (fit_endpoints, fit_stack, track_snapshots) needs them.
install_requires =
    numpy
    scipy
    scikit-image
    tifffile
    matplotlib

python_requires = >=3.8
include_package_data = True
# Two source roots: the core package in ``src/``, the optional napari
# plugin in ``plugins/``. setuptools accepts multiple ``=ROOT`` entries
# and walks each independently.
package_dir =
    =src
    =plugins
setup_requires = setuptools_scm

[options.packages.find]
where =
    src
    plugins

[options.entry_points]
caped.manifest =
    KapoorLabs-MTrack = kapoorlabs_mtrack:caped.yaml
napari.manifest =
    kapoorlabs-mtrack-optimizer = kapoorlabs_mtrack_optimizer:napari.yaml
    kapoorlabs-mtrack-ransac = kapoorlabs_mtrack_ransac:napari.yaml

[options.extras_require]
# Pull in the napari plugin in addition to the core optimizer.
napari =
    napari
    magicgui
    qtpy
    pyqt5
    pandas
# Optional: pretrained vollseg UNET segmentation for kymographs in the
# ransac plugin. Heavy dep (TensorFlow / csbdeep) -- not in the default.
vollseg =
    vollseg
    csbdeep
# Everything (core + both plugins + vollseg + dev tools).
all =
    napari
    magicgui
    qtpy
    pyqt5
    pandas
    vollseg
    csbdeep
    pytest
    pytest-qt
testing =
    tox
    pytest
    pytest-cov

[options.package_data]
* = *.yaml
