# All packaging metadata has moved to pyproject.toml under the
# ``[project]`` and ``[tool.setuptools]`` tables. The old
# ``[metadata]`` / ``[options]`` form here was tripping on the multi-
# root ``package_dir`` (``=src`` + ``=plugins``) on setuptools‚Č•80 /
# Python 3.14. This file is kept only because some pre-commit /
# editor tooling still scans for it; setuptools itself ignores it
# entirely now that ``pyproject.toml`` carries every field.
